--- a/source/style.scss
+++ b/source/style.scss
@@ -44,7 +44,7 @@ Base includes
 @import "sections/cursor";
 @import "sections/lightbox";
 @import "sections/products";
-@import "sections/contact";
+@import "sections/contact"; 
 @import "sections/icon";
 @import "sections/mega";
 @import "sections/password";
@@ -52,3 +52,5 @@ Base includes
 @import "sections/benefits";
 @import "sections/steps";
 @import "sections/text-text-image";
+@import "sections/list-item";
+@import "sections/comparison-element";
