--- a/source/sections/list-item.scss
+++ b/source/sections/list-item.scss
@@ -2,15 +2,113 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    margin: 6rem auto;
-    padding: 0 2rem;
+    padding: 6rem 2rem;
 
     &__wrap {
-        max-width: var(--inner-content-width);
+        max-width: var(--content-width);
         margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
 
         @include media($md, max) {
             padding: 4rem 2rem;
         }
     }
+
+    &__image {
+        width: 30%;
+
+        @media screen and (max-width: 768px) {
+            width: 100%;
+        }
+    }
+
+    &__content {
+        width: 70%;
+        padding: 0 6rem;
+
+        .spacer {
+            height: 3rem;
+        }
+        
+        @media screen and (max-width: 768px) {
+            width: 100%;
+            padding: 0;
+            margin-top: 2rem;
+        }
+    }
+
+    &__item {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        border-bottom: 1px solid rgba(white, 0.3);
+        margin-bottom: 2rem;
+        padding-bottom: 2rem;
+        vertical-align: middle;
+        align-items: center;
+
+        h6 {
+            width: 26rem;
+            margin: 0 auto;
+            @media screen and (max-width: 968px) {
+                width: 100%;
+            }
+        }
+
+        &__content {
+            width: calc(100% - 26rem);
+            padding-left: 4rem;
+
+            @media screen and (max-width: 968px) {
+                width: 100%;
+                padding-left: 0;
+                margin-top: 0.5rem;
+            }
+
+            p {
+                margin: 0 auto;
+            }
+        }
+    }
+}
+
+[data-theme=""],
+[data-theme="pregnancy"] {
+    .list-item-element {
+        * {
+            color: var(--green);
+        }
+    }
+}
+
+[data-theme=""],
+[data-theme="postpartum"],
+[data-theme="c-section-delivery"],
+[data-theme="v-delivery"] {
+    .list-item-element {
+        background: var(--purple-light);
+        * {
+            color: var(--orange);
+        }
+
+        .coloured--background {
+            background: #fdeeea;
+        }
+    }
+}
+
+[data-theme="breast-care"] {
+    .list-item-element {
+        * {
+            color: var(--pink);
+        }
+    }
+}
+
+.coloured--background {
+    padding: 0.6rem 2rem 1rem;
+    margin-bottom: 1rem;
+    display: inline-block;
+    border-radius: 0.5rem;
 }
