--- a/source/sections/comparison-element.scss
+++ b/source/sections/comparison-element.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    padding: 0 2rem;
+    padding: 0 !important;
 
     &__wrap {
         max-width: var(--content-width);
@@ -12,11 +12,11 @@
         width: 100%;
 
         @include media($md, max) {
-            padding: 4rem 2rem;
+            padding: 4rem 0;
         }
     }
 
-    &__image--img{
+    &__image--img {
         max-width: calc(100% - 4rem);
     }
 
@@ -36,7 +36,7 @@
         align-items: center;
         font-size: 2rem;
 
-        &:last-of-type{
+        &:last-of-type {
             border-bottom: none;
         }
     }
@@ -45,6 +45,10 @@
     &__right {
         text-align: center;
         padding: 4rem 0;
+
+        @media screen and (max-width: 968px) {
+            width: 100% !important;
+        }
     }
 
     &__left {
@@ -54,6 +58,17 @@
     &__vs {
         width: 0;
 
+        @media screen and (max-width: 968px) {
+            width: 100%;
+            height: 1px;
+            position: relative;
+
+            span {
+                top: 0 !important;
+                transform: translateX(-50%) translateY(-50%) !important;
+            }
+        }
+
         span {
             width: 6rem;
             border-radius: 100%;
@@ -61,7 +76,7 @@
             top: 5rem;
             left: 50%;
             transform: translateX(-50%);
-            background: var(--orange);
+            background: var(--green);
             aspect-ratio: 1;
 
             b {
@@ -76,7 +91,7 @@
 
     &__right {
         width: 50%;
-        background: #F1F0E8;
+        background: #eee;
     }
 }
 
@@ -86,10 +101,12 @@
         * {
             color: var(--green);
         }
+
+        .coloured--background {
+            background: #a6d3d8 !important;
+        }
     }
 }
-
-[data-theme=""],
 [data-theme="postpartum"],
 [data-theme="c-section-delivery"],
 [data-theme="v-delivery"] {
@@ -98,6 +115,9 @@
 
         * {
             color: var(--orange);
+        }
+        .comparison-element__vs span{
+             background: var(--orange);
         }
 
         .coloured--background {
