--- a/source/sections/comparison-element.scss
+++ b/source/sections/comparison-element.scss
@@ -106,6 +106,11 @@
             background: #a6d3d8 !important;
         }
     }
+    .image-element {
+        .coloured--background {
+            background: #a6d3d8 !important;
+        }
+    }
 }
 [data-theme="postpartum"],
 [data-theme="c-section-delivery"],
@@ -116,10 +121,16 @@
         * {
             color: var(--orange);
         }
-        .comparison-element__vs span{
-             background: var(--orange);
+        .comparison-element__vs span {
+            background: var(--orange);
         }
 
+        .coloured--background {
+            background: #fdeeea;
+        }
+    }
+
+    .image-element {
         .coloured--background {
             background: #fdeeea;
         }
