--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -65,7 +65,7 @@
         &__item {
             display: flex;
             flex-wrap: wrap;
-            padding: 1rem 2rem;
+            padding: 1rem 1rem;
             align-items: center;
 
             p {
@@ -75,10 +75,13 @@
             }
 
             img {
-                // filter: brightness(0);
-                width: 3rem;
+                width: 4.5rem;
                 height: auto;
                 margin-right: 1rem;
+
+                @media screen and (max-width: 768px) {
+                    width: 3.8rem;
+                }
             }
         }
     }
