--- a/snippets/grid-slide.liquid
+++ b/snippets/grid-slide.liquid
@@ -39,7 +39,7 @@
         </h4>
       </div>
     </div>
-    <div
+    {% comment %} <div
       class="collections__item [ js-collection-slider-scroll ] "
       data-id="2"
       data-handle="v-delivery"
@@ -57,8 +57,8 @@
           <b>V-Delivery</b>
         </h4>
       </div>
-    </div>
-    <div
+    </div> {% endcomment %}
+    {% comment %} <div
       class="collections__item [ js-collection-slider-scroll ] "
       data-id="3"
       data-handle="c-section-delivery"
@@ -76,7 +76,7 @@
           <b>C-Section Delivery</b>
         </h4>
       </div>
-    </div>
+    </div> {% endcomment %}
 
     <div
       class="collections__item [ js-collection-slider-scroll ] "
