Updated gifts to care packs

--- a/snippets/mega.liquid
+++ b/snippets/mega.liquid
@@ -126,7 +126,7 @@
         </div>
 
         <div class="mega__wrap__column mega__wrap__column--blocked animated [ js-in-view ]">
-          <a href="/collections/kits-gifts" class="mega__wrap__column__block [ js-cursor-sale ]">
+          <a href="/collections/care-packs" class="mega__wrap__column__block [ js-cursor-sale ]">
             {{ collections['care-packs'].image | image_url: width: 250 | image_url: height: 450 | image_tag }}
             <p>
               <span class="button"><b>Care Packs</b></span>
