--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -184,11 +184,11 @@
           </div>
           <div class="mobile-navigation-menu__item">
             <a
-              href="{{ collections.kits-gifts.url }}"
-              data-id="Kits-gifts"
+              href="{{ collections.care-packs.url }}"
+              data-id="Care-packs"
               class="mobile-navigation-menu__item__link mobile-navigation-menu__item__link--small animate-white-to-green {% if link.active %}mobile-navigation-menu__item__link--current{% endif %}"
             >
-              Kits & Gifts
+              Care packs
             </a>
           </div>
         {% endif %}
